--- a/main.html
+++ b/main.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I'm not a robot</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <main>
-      <!-- solution start -->
-      
-      <!-- solution end -->
-    </main>
-    <script src="./script.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>I'm not a robot</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <main>
+    <!-- solution start -->
+    <h3 id="h">Please click on the identicl tiles to verify that you are not a robot</h3>
+    <!-- solution end -->
+    <div class="image-container">
+      <!-- <img src="" alt="" class="img1"><img src="" alt="" class="img2"><img src="" alt="" class="img3"><img src="" alt="" class="img4"><img src="" alt="" class="img5"> -->
+    </div>
+    <div class="btns">
+
+    </div>
+    <!-- <button id="verify">Verify</button> -->
+    <!-- <button id="reset">Reset</button> -->
+  </main>
+  <script src="./script.js"></script>
+</body>
+
 </html>
