--- a/main.html
+++ b/main.html
@@ -12,13 +12,10 @@
 <body>
   <main>
     <!-- solution start -->
-    <h3 id="h">Please click on the identicl tiles to verify that you are not a robot</h3>
+    <!-- <h3 id="h">Please click on the identicl tiles to verify that you are not a robot</h3> -->
     <!-- solution end -->
     <div class="image-container">
       <!-- <img src="" alt="" class="img1"><img src="" alt="" class="img2"><img src="" alt="" class="img3"><img src="" alt="" class="img4"><img src="" alt="" class="img5"> -->
-    </div>
-    <div class="btns">
-
     </div>
     <!-- <button id="verify">Verify</button> -->
     <!-- <button id="reset">Reset</button> -->
